<resources>
    <string name="app_name">Stock Style</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="cadastro">Cadastre-se</string>
    <string name="entrar">Entrar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome_empresa">Nome Empresa</string>
    <string name="cpf">CPF</string>
    <string name="cnpj">CNPJ</string>
    <string name="endere_o">Endereço</string>
    <string name="loja_virtual">Loja Virtual?</string>
    <string name="nome_da_unidade">Nome da Unidade</string>
    <string name="unidades">Unidades</string>
    <string name="cadastro_produto">Cadastro de Produtos</string>
    <string name="atualizar">Atualizar</string>
    <string name="excluir">Excluir</string>
    <string name="c_digo_ou_id">Código ou ID:</string>
    <string name="descri_o">Descrição:</string>
    <string name="nome_do_produto">Nome do Produto:</string>
    <string name="quantidade">Quantidade:</string>
    <string name="digite_o_c_digo_do_produto_para_atualizar_ou_excluir">Digite o código do produto para atualizar ou excluir.</string>
</resources>