<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telas.Att_Excluir">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="132dp"
        android:layout_height="114dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/tenis_removebg_preview" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="321dp"
        android:layout_height="56dp"
        android:text="@string/digite_o_c_digo_do_produto_para_atualizar_ou_excluir"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/et_ATT_EX_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_ATT_EX_att"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4580C6"
        android:text="@string/atualizar"
        app:layout_constraintBottom_toTopOf="@+id/bt_ATT_EX_excluir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ATT_EX_descricao"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_ATT_EX_excluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4580C6"
        android:text="@string/excluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_ATT_EX_att"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_ATT_EX_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Codigo ou ID"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_ATT_EX_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_ATT_EX_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_do_produto"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_ATT_EX_qtd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ATT_EX_id"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_ATT_EX_qtd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/quantidade"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_ATT_EX_descricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ATT_EX_produto"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_ATT_EX_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descri_o"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/bt_ATT_EX_att"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ATT_EX_qtd"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>