<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telas.cadastro_fun">

    <EditText
        android:id="@+id/et_CF_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_CF_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_CF_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_CF_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_CF_email"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_CF_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_completo"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/et_CF_cpf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_CF_senha"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/et_CF_cpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/spin_CF_cargoFun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_CF_nome"
        app:layout_constraintVertical_bias="0.5" />

    <Spinner
        android:id="@+id/spin_CF_cargoFun"
        android:layout_width="235dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toTopOf="@+id/spin_CF_unidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_CF_cpf"
        app:layout_constraintVertical_bias="0.5" />

    <Spinner
        android:id="@+id/spin_CF_unidade"
        android:layout_width="235dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_CF_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_CF_cargoFun"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/bt_CF_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4580C6"
        android:text="@string/cadastrar"
        app:iconTint="#4580C6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_CF_unidade"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_de_funcionario"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/et_CF_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>